src/objects/saInquiry__c.object
<CustomObject>
    <fields>
        <fullName>BranchCode__c</fullName>
        <label>支店</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountReply__c</fullName>
        <label>CountReply</label>
        <summaryFilterItems>
            <field>saInquiryReply__c.Status__c</field>
            <operation>equals</operation>
            <value>返事済</value>
        </summaryFilterItems>
        <summaryForeignKey>saInquiryReply__c.saInquiry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountShared__c</fullName>
        <label>CountShared</label>
        <summaryFilterItems>
            <field>saInquiryReply__c.Status__c</field>
            <operation>equals</operation>
            <value>返事待ち, 返事中, 返事済</value>
        </summaryFilterItems>
        <summaryForeignKey>saInquiryReply__c.saInquiry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DisplayedValidToDatetime__c</fullName>
        <description>Displayed value for the DeadLine of the answer</description>
        <label>回答期限</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InquiryDescription__c</fullName>
        <label>通知メールの本文に記載する内容</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsEvolva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEvolva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非公開</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <formula>OR(
AND(
TEXT(Status__c) == &apos;Saved&apos;,
TEXT(Type__c) == &apos;DAILY_REPORT&apos;,
OR(ISNULL(ValidFrom__c), ValidFrom__c &lt;= TODAY()),
OR(ISNULL(ValidTo__c), ValidTo__c &gt;= TODAY())
),
AND(
TEXT(Status__c) == &apos;Saved&apos;,
TEXT(Type__c) != &apos;DAILY_REPORT&apos;,
OR(ISNULL(ValidFromDatetime__c), ValidFromDatetime__c &lt;= NOW()),
OR(ISNULL(ValidToDatetime__c), ValidToDatetime__c &gt;= NOW())
)
)</formula>
        <label>運用中</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuerLabel__c</fullName>
        <label>発信元</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateFormula__c</fullName>
        <formula>Datevalue(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrivacySetting__c</fullName>
        <label>PrivacySetting</label>
        <picklist>
            <picklistValues>
                <fullName>PUBLIC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PRIVATE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PushNotificationResendCountFormula__c</fullName>
        <description>Replace NULL by 0 in PushNotificationResendCount__c</description>
        <formula>PushNotificationResendCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>リマインド通知回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationResendCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>リマインド通知回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationStatus__c</fullName>
        <label>PushNotificationStatus</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeCode__c</fullName>
        <label>支社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <label>フォーム名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>TemporarySaved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>DAILY_REPORT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SURVEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU_HEARING</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidFromDateFormula__c</fullName>
        <formula>Datevalue(ValidFromDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ValidFromDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidFromDatetime__c</fullName>
        <label>運用From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <label>運用From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidToDateFormula__c</fullName>
        <formula>Datevalue(ValidToDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ValidToDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidToDatetime__c</fullName>
        <label>運用To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValidTo__c</fullName>
        <label>運用To</label>
        <type>Date</type>
    </fields>
    <label>問い合わせ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>ValidFrom__c</columns>
        <columns>ValidTo__c</columns>
        <columns>IsValid__c</columns>
        <columns>ReportName__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INQ-{00000000}</displayFormat>
        <label>問い合わせ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>